# ozon_prices

./: .env.template  .env_example  .gitignore  bot_run.py  db.sql  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run.sh
bot/: __init__.py  bot_main.py  main.py
bot/db/: __init__.py  main.py
bot/db/tables/: links.py  prices.py  users.py
bot/handlers/: other.py
bot/handlers/user/: __init__.py  commands.py  logic.py
bot/misc/: __init__.py  config.py  env.py  func.py
docker-build/app/: Dockerfile  Dockerfile_base  Dockerfile_bot  Dockerfile_celery  Dockerfile_vnc
services/: ozon.service  ozon_bot.service
src/: Dockerfile  alembic.ini  main.py  prestart.sh  run  run.py  run_celery.sh  runcelery.sh
src/alembic/: env.py
src/alembic/versions/: 2025_05_21_0242-257a825df0cb_init.py  2025_05_21_1907-5f5a099a7e5e_init.py  2025_05_21_2017-52ddefde3392_init.py  2025_06_10_1118-5ebe7fbf35b7_init.py
src/apps/bot/: bot_main.py
src/apps/bot/handlers/: main.py  other.py
src/apps/celery/: celery_app.py  helper.py  parser.py  tasks.py  telegram.py
src/apps/parser/: __init__.py  checker.py  parser.py
src/bot/: __init__.py  bot_main.py  main.py
src/bot/handlers/: __init__.py  main.py  other.py
src/bot/handlers/user/: __init__.py  commands.py
src/bot/misc/: __init__.py  config.py
src/core/: __init__.py  config.py  redis.py
src/core/database/: db_helper.py
src/core/database/DAL/: __init__.py  link_dal.py  links_dal.py  (+3 more)
src/core/services/: __init__.py
src/parser/: __init__.py  checker.py  main.py  parser.py
src/utils/: msg_editor.py
(+16 files in other folders)
