[tool.poetry]
name = "ozon_parser"  # укажи любое имя
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
#package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.15.2"
pydantic = {extras = ["email"], version = "^2.11.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
asyncpg = "^0.30.0"
aiogram = "^3.20.0.post0"
pydantic-settings = "^2.8.1"
requests = "^2.32.3"
undetected-chromedriver = "^3.5.5"
apscheduler = "^3.11.0"
celery = {extras = ["redis"], version = "^5.5.3"}
flower = "^2.0.1"
beautifulsoup4 = "^4.13.4"
setuptools = "^80.9.0"
lxml = "^5.4.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.scripts]
ozon_prices = "src.main:main"
